add news page article html

--- a/pages/post.html
+++ b/pages/post.html
@@ -93,6 +93,126 @@
                         <img src="../assets/news/preview.jpg" alt="background" class="page-title__preview" />
                   </div>
             </section>
+            <section class="article">
+                  <article class="article-container container">
+                        <span class="article__text">
+                              <b>
+                                    Vulputate vitae pellentesque scelerisque luctus consequat mattis pellentesque dui
+                                    odio. Interdum aenean sit malesuada
+                                    ornare sed gravida rhoncus, congue. Purus auctor nullam diam quis est hendrerit ac
+                                    euismod.
+                              </b>
+                        </span>
+                        <span class="article__text">
+                              At facilisi sapien posuere eget nunc senectus proin nullam. Tortor senectus in et
+                              sagittis, vitae diam cras dignissim.
+                              Varius adipiscing eget diam nisi. Orci, consectetur vulputate metus ornare pharetra,
+                              neque, fermentum. Vel nec rhoncus,
+                              non nunc, neque in massa. Feugiat leo nam nisl lacinia amet, odio. Mi varius viverra risus
+                              vel.
+                              <br><br>
+                              Amet, morbi sed pharetra, elit eget mi potenti. Condimentum orci interdum feugiat lectus
+                              libero duis. Nisl massa,
+                              elementum varius sit. Nunc felis, porttitor aliquam urna, accumsan et sed. Aliquet non sed
+                              duis diam vehicula rhoncus.
+                              In dictum nullam tincidunt semper pellentesque purus morbi sed. Ut aliquet velit pharetra,
+                              nisi nunc, non.
+                        </span>
+                        <div class="article__quotation">
+                              <svg class="quotation__braces" xmlns="http://www.w3.org/2000/svg" width="28" height="20"
+                                    viewBox="0 0 28 20" fill="none">
+                                    <path d="M18 8.92534C18 8.63119 18.1295 8.35196 18.3541 8.16195L28 0V19C28 19.5523 27.5523 20 27 20H19C18.4477 20 18 19.5523 18 19V8.92534Z"
+                                          fill="#FF5A30" />
+                                    <path d="M0 8.92534C0 8.63119 0.129507 8.35196 0.354058 8.16195L10 0V19C10 19.5523 9.55228 20 9 20H1C0.447715 20 0 19.5523 0 19V8.92534Z"
+                                          fill="#FF5A30" />
+                              </svg>
+                              <span>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam
+                                    viverra mus lobortis fermentum amet,
+                                    eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                                    Congue tortor in tot euismod
+                                    vulputate etiam eros. Vel accumsan at elit neque, ipsum.
+                              </span>
+                        </div>
+                        <span class="article__text">
+                              Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus
+                              blandit in neque amet non
+                              fringilla blandit:
+                        </span>
+                        <ul class="article__list">
+                              <li class="article__item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+                                          <path d="M7.99935 15.3327C12.0427 15.3327 15.3327 12.043 15.3327 7.99935C15.3327 7.30141 15.2353 6.61361 15.0423 5.9549C14.9473 5.63099 14.6091 5.44495 14.2843 5.53998C13.9601 5.63472 13.7746 5.97415 13.8694 6.29805C14.0291 6.84531 14.1105 7.41793 14.1105 7.99935C14.1105 11.369 11.369 14.1105 7.99935 14.1105C4.62973 14.1105 1.88824 11.369 1.88824 7.99935C1.88824 4.62973 4.62973 1.88824 7.99935 1.88824C9.22396 1.88824 10.4022 2.24631 11.4066 2.92352C11.6862 3.11225 12.0663 3.0381 12.2547 2.7585C12.4433 2.47861 12.3698 2.09875 12.0899 1.91017C10.8829 1.0963 9.46849 0.666016 7.99935 0.666016C3.95596 0.666016 0.666016 3.95566 0.666016 7.99935C0.666016 12.043 3.95596 15.3327 7.99935 15.3327Z"
+                                                fill="#FF5A30" />
+                                          <path d="M14.8612 1.52787L7.99923 8.38953L5.80391 6.19454C5.5435 5.93429 5.12162 5.93429 4.86121 6.19454C4.60095 6.45496 4.60095 6.87683 4.86121 7.13725L7.52787 9.80391C7.65824 9.93429 7.82849 9.99923 7.99923 9.99923C8.16996 9.99923 8.34021 9.93429 8.47058 9.80391L15.8039 2.47058C16.0642 2.21016 16.0642 1.78829 15.8039 1.52787C15.5435 1.26762 15.1216 1.26762 14.8612 1.52787Z"
+                                                fill="#FF5A30" />
+                                    </svg>
+                                    <span>A fermentum in morbi pretium aliquam adipiscing donec tempus.</span>
+                              </li>
+                              <li class="article__item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+                                          <path d="M7.99935 15.3327C12.0427 15.3327 15.3327 12.043 15.3327 7.99935C15.3327 7.30141 15.2353 6.61361 15.0423 5.9549C14.9473 5.63099 14.6091 5.44495 14.2843 5.53998C13.9601 5.63472 13.7746 5.97415 13.8694 6.29805C14.0291 6.84531 14.1105 7.41793 14.1105 7.99935C14.1105 11.369 11.369 14.1105 7.99935 14.1105C4.62973 14.1105 1.88824 11.369 1.88824 7.99935C1.88824 4.62973 4.62973 1.88824 7.99935 1.88824C9.22396 1.88824 10.4022 2.24631 11.4066 2.92352C11.6862 3.11225 12.0663 3.0381 12.2547 2.7585C12.4433 2.47861 12.3698 2.09875 12.0899 1.91017C10.8829 1.0963 9.46849 0.666016 7.99935 0.666016C3.95596 0.666016 0.666016 3.95566 0.666016 7.99935C0.666016 12.043 3.95596 15.3327 7.99935 15.3327Z"
+                                                fill="#FF5A30" />
+                                          <path d="M14.8612 1.52787L7.99923 8.38953L5.80391 6.19454C5.5435 5.93429 5.12162 5.93429 4.86121 6.19454C4.60095 6.45496 4.60095 6.87683 4.86121 7.13725L7.52787 9.80391C7.65824 9.93429 7.82849 9.99923 7.99923 9.99923C8.16996 9.99923 8.34021 9.93429 8.47058 9.80391L15.8039 2.47058C16.0642 2.21016 16.0642 1.78829 15.8039 1.52787C15.5435 1.26762 15.1216 1.26762 14.8612 1.52787Z"
+                                                fill="#FF5A30" />
+                                    </svg>
+                                    <span>Vulputate placerat amet pulvinar lorem nisl.</span>
+                              </li>
+                              <li class="article__item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+                                          <path d="M7.99935 15.3327C12.0427 15.3327 15.3327 12.043 15.3327 7.99935C15.3327 7.30141 15.2353 6.61361 15.0423 5.9549C14.9473 5.63099 14.6091 5.44495 14.2843 5.53998C13.9601 5.63472 13.7746 5.97415 13.8694 6.29805C14.0291 6.84531 14.1105 7.41793 14.1105 7.99935C14.1105 11.369 11.369 14.1105 7.99935 14.1105C4.62973 14.1105 1.88824 11.369 1.88824 7.99935C1.88824 4.62973 4.62973 1.88824 7.99935 1.88824C9.22396 1.88824 10.4022 2.24631 11.4066 2.92352C11.6862 3.11225 12.0663 3.0381 12.2547 2.7585C12.4433 2.47861 12.3698 2.09875 12.0899 1.91017C10.8829 1.0963 9.46849 0.666016 7.99935 0.666016C3.95596 0.666016 0.666016 3.95566 0.666016 7.99935C0.666016 12.043 3.95596 15.3327 7.99935 15.3327Z"
+                                                fill="#FF5A30" />
+                                          <path d="M14.8612 1.52787L7.99923 8.38953L5.80391 6.19454C5.5435 5.93429 5.12162 5.93429 4.86121 6.19454C4.60095 6.45496 4.60095 6.87683 4.86121 7.13725L7.52787 9.80391C7.65824 9.93429 7.82849 9.99923 7.99923 9.99923C8.16996 9.99923 8.34021 9.93429 8.47058 9.80391L15.8039 2.47058C16.0642 2.21016 16.0642 1.78829 15.8039 1.52787C15.5435 1.26762 15.1216 1.26762 14.8612 1.52787Z"
+                                                fill="#FF5A30" />
+                                    </svg>
+                                    <span>Consequat feugiat habitant gravida quisque elit bibendum id adipiscing
+                                          sed.</span>
+                              </li>
+                              <li class="article__item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+                                          <path d="M7.99935 15.3327C12.0427 15.3327 15.3327 12.043 15.3327 7.99935C15.3327 7.30141 15.2353 6.61361 15.0423 5.9549C14.9473 5.63099 14.6091 5.44495 14.2843 5.53998C13.9601 5.63472 13.7746 5.97415 13.8694 6.29805C14.0291 6.84531 14.1105 7.41793 14.1105 7.99935C14.1105 11.369 11.369 14.1105 7.99935 14.1105C4.62973 14.1105 1.88824 11.369 1.88824 7.99935C1.88824 4.62973 4.62973 1.88824 7.99935 1.88824C9.22396 1.88824 10.4022 2.24631 11.4066 2.92352C11.6862 3.11225 12.0663 3.0381 12.2547 2.7585C12.4433 2.47861 12.3698 2.09875 12.0899 1.91017C10.8829 1.0963 9.46849 0.666016 7.99935 0.666016C3.95596 0.666016 0.666016 3.95566 0.666016 7.99935C0.666016 12.043 3.95596 15.3327 7.99935 15.3327Z"
+                                                fill="#FF5A30" />
+                                          <path d="M14.8612 1.52787L7.99923 8.38953L5.80391 6.19454C5.5435 5.93429 5.12162 5.93429 4.86121 6.19454C4.60095 6.45496 4.60095 6.87683 4.86121 7.13725L7.52787 9.80391C7.65824 9.93429 7.82849 9.99923 7.99923 9.99923C8.16996 9.99923 8.34021 9.93429 8.47058 9.80391L15.8039 2.47058C16.0642 2.21016 16.0642 1.78829 15.8039 1.52787C15.5435 1.26762 15.1216 1.26762 14.8612 1.52787Z"
+                                                fill="#FF5A30" />
+                                    </svg>
+                                    <span>Etiam duis lobortis in fames ultrices commodo nibh.</span>
+                              </li>
+                        </ul>
+                        <span class="article__text">
+                              Enim, vel massa odio diam. Blandit massa gravida feugiat elementum id nec sed leo. Nisi in
+                              ornare lectus eget. Urna,
+                              risus, consectetur volutpat lorem purus. Velit aliquet nibh vitae maecenas. Consectetur
+                              neque ut aliquam eros, purus
+                              enim dignissim aenean vitae. Ultrices fames augue mattis tortor est justo, pharetra nibh
+                              risus. Facilisi at porttitor
+                              volutpat natoque proin amet, nulla. Vivamus ut lobortis sagittis curabitur tellus
+                              convallis eget netus vitae.
+                        </span>
+                        <div class="article__share">
+                              <span>Share:</span>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"
+                                    fill="none">
+                                    <path d="M11.5628 0.00457747L8.78558 0C5.66542 0 3.64903 2.12509 3.64903 5.41423V7.91055H0.85662C0.615322 7.91055 0.419922 8.1115 0.419922 8.35937V11.9763C0.419922 12.2241 0.615545 12.4249 0.85662 12.4249H3.64903V21.5514C3.64903 21.7993 3.84443 22 4.08573 22H7.72904C7.97033 22 8.16573 21.799 8.16573 21.5514V12.4249H11.4307C11.672 12.4249 11.8674 12.2241 11.8674 11.9763L11.8688 8.35937C11.8688 8.24036 11.8226 8.12638 11.7409 8.04215C11.6591 7.95793 11.5477 7.91055 11.4318 7.91055H8.16573V5.79439C8.16573 4.77728 8.40168 4.26094 9.6915 4.26094L11.5624 4.26025C11.8035 4.26025 11.9989 4.0593 11.9989 3.81166V0.453169C11.9989 0.205757 11.8037 0.00503522 11.5628 0.00457747Z"
+                                          fill="#787A80" />
+                              </svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path d="M21.995 22L22 21.9992V14.6642C22 11.0758 21.2275 8.31167 17.0325 8.31167C15.0158 8.31167 13.6625 9.41833 13.11 10.4675H13.0517V8.64667H9.07416V21.9992H13.2158V15.3875C13.2158 13.6467 13.5458 11.9633 15.7017 11.9633C17.8258 11.9633 17.8575 13.95 17.8575 15.4992V22H21.995Z"
+                                          fill="#787A80" />
+                                    <path d="M2.32999 8.6475H6.47666V22H2.32999V8.6475Z" fill="#787A80" />
+                                    <path d="M4.40167 2C3.07583 2 2 3.07583 2 4.40167C2 5.7275 3.07583 6.82583 4.40167 6.82583C5.7275 6.82583 6.80333 5.7275 6.80333 4.40167C6.8025 3.07583 5.72667 2 4.40167 2Z"
+                                          fill="#787A80" />
+                              </svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path d="M22.5 5.77233C21.7271 6.10027 20.8978 6.32267 20.0264 6.42196C20.9161 5.91181 21.5972 5.10263 21.92 4.1414C21.0854 4.61383 20.1642 4.95688 19.1826 5.14285C18.3966 4.33994 17.2785 3.83984 16.0384 3.83984C13.6593 3.83984 11.7303 5.68691 11.7303 7.9637C11.7303 8.2866 11.7683 8.60199 11.8418 8.90357C8.26201 8.73141 5.08768 7.08917 2.96314 4.59372C2.59176 5.20189 2.38049 5.91053 2.38049 6.66697C2.38049 8.09814 3.14161 9.36093 4.2964 10.0997C3.5904 10.0771 2.92639 9.89116 2.34508 9.58205V9.63357C2.34508 11.6314 3.83056 13.2988 5.80024 13.6783C5.43936 13.7713 5.05882 13.8228 4.66514 13.8228C4.38696 13.8228 4.11794 13.7964 3.85417 13.7461C4.40267 15.3859 5.99315 16.5783 7.87756 16.611C6.40388 17.7167 4.54573 18.3739 2.52749 18.3739C2.17976 18.3739 1.83724 18.3537 1.5 18.3173C3.40671 19.4896 5.67036 20.1732 8.10327 20.1732C16.028 20.1732 20.3597 13.8881 20.3597 8.43741L20.3453 7.90341C21.1917 7.32537 21.9239 6.59912 22.5 5.77233Z"
+                                          fill="#787A80" />
+                              </svg>
+                        </div>
+                  </article>
+            </section>
             <section class="application">
                   <div class="application-container container">
                         <form action="" class="aplication__form">
