--- a/pages/post.html
+++ b/pages/post.html
@@ -126,13 +126,13 @@
                                     <path d="M0 8.92534C0 8.63119 0.129507 8.35196 0.354058 8.16195L10 0V19C10 19.5523 9.55228 20 9 20H1C0.447715 20 0 19.5523 0 19V8.92534Z"
                                           fill="#FF5A30" />
                               </svg>
-                              <span>
+                              <span><b>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam
                                     viverra mus lobortis fermentum amet,
                                     eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
                                     Congue tortor in tot euismod
                                     vulputate etiam eros. Vel accumsan at elit neque, ipsum.
-                              </span>
+                              </b></span>
                         </div>
                         <span class="article__text">
                               Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus
@@ -193,7 +193,7 @@
                               convallis eget netus vitae.
                         </span>
                         <div class="article__share">
-                              <span>Share:</span>
+                              <span><b>Share:</b></span>
                               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"
                                     fill="none">
                                     <path d="M11.5628 0.00457747L8.78558 0C5.66542 0 3.64903 2.12509 3.64903 5.41423V7.91055H0.85662C0.615322 7.91055 0.419922 8.1115 0.419922 8.35937V11.9763C0.419922 12.2241 0.615545 12.4249 0.85662 12.4249H3.64903V21.5514C3.64903 21.7993 3.84443 22 4.08573 22H7.72904C7.97033 22 8.16573 21.799 8.16573 21.5514V12.4249H11.4307C11.672 12.4249 11.8674 12.2241 11.8674 11.9763L11.8688 8.35937C11.8688 8.24036 11.8226 8.12638 11.7409 8.04215C11.6591 7.95793 11.5477 7.91055 11.4318 7.91055H8.16573V5.79439C8.16573 4.77728 8.40168 4.26094 9.6915 4.26094L11.5624 4.26025C11.8035 4.26025 11.9989 4.0593 11.9989 3.81166V0.453169C11.9989 0.205757 11.8037 0.00503522 11.5628 0.00457747Z"
