add comments section html

--- a/pages/post.html
+++ b/pages/post.html
@@ -127,12 +127,14 @@
                                           fill="#FF5A30" />
                               </svg>
                               <span><b>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam
-                                    viverra mus lobortis fermentum amet,
-                                    eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
-                                    Congue tortor in tot euismod
-                                    vulputate etiam eros. Vel accumsan at elit neque, ipsum.
-                              </b></span>
+                                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus
+                                          quam
+                                          viverra mus lobortis fermentum amet,
+                                          eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis
+                                          non.
+                                          Congue tortor in tot euismod
+                                          vulputate etiam eros. Vel accumsan at elit neque, ipsum.
+                                    </b></span>
                         </div>
                         <span class="article__text">
                               Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus
@@ -212,6 +214,99 @@
                               </svg>
                         </div>
                   </article>
+            </section>
+            <section class="comments">
+                  <div class="comments-container container">
+                        <h2 class="comments__title title">4 comments</h2>
+                        <ul class="comments__list">
+                              <li class="comments__item">
+                                    <div class="item__user">
+                                          <span class="user__name">Devon Lane</span>
+                                          <span class="user__date">July 15, 2020</span>
+                                    </div>
+                                    <div class="item__comment">
+                                          <p class="comment__text">
+                                                Phasellus varius faucibus ultrices odio in. Massa neque dictum natoque
+                                                ornare rutrum malesuada et phasellus. Viverra
+                                                natoque nulla cras vel nisl proin senectus. Tortor sed eleifend ante
+                                                tristique felis sed urna aliquet. Suspendisse fames
+                                                egestas sed duis purus diam et.
+                                          </p>
+                                          <div class="comment__reply">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17"
+                                                      viewBox="0 0 16 17" fill="none">
+                                                      <path d="M0.667318 7.82816L6.7625 1.16602V5.14077H8.05839C12.0766 5.14077 15.334 8.38764 15.334 12.393V14.4993L14.7584 13.8706C12.8014 11.7333 10.0324 10.5156 7.1293 10.5156H6.7625V14.4903L0.667318 7.82816Z"
+                                                            fill="#787A80" />
+                                                </svg>
+                                                <span>Reply</span>
+                                          </div>
+                                    </div>
+                              </li>
+                              <li class="comments__item">
+                                    <div class="item__user">
+                                          <span class="user__name">Annette Black</span>
+                                          <span class="user__date">1 day ago</span>
+                                    </div>
+                                    <div class="item__comment">
+                                          <p class="comment__text">
+                                                <span class="text__reply-to">@Devon Lane</span> Egestas fermentum
+                                                natoque sollicitudin mauris. Facilisis
+                                                praesent urna sed rhoncus quis pharetra
+                                                pellentesque erat sagittis.
+                                          </p>
+                                          <div class="comment__reply">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17"
+                                                      viewBox="0 0 16 17" fill="none">
+                                                      <path d="M0.667318 7.82816L6.7625 1.16602V5.14077H8.05839C12.0766 5.14077 15.334 8.38764 15.334 12.393V14.4993L14.7584 13.8706C12.8014 11.7333 10.0324 10.5156 7.1293 10.5156H6.7625V14.4903L0.667318 7.82816Z"
+                                                            fill="#787A80" />
+                                                </svg>
+                                                <span>Reply</span>
+                                          </div>
+                                    </div>
+                              </li>
+                              <li class="comments__item">
+                                    <div class="item__user">
+                                          <span class="user__name">Albert Flores</span>
+                                          <span class="user__date">July 7, 2020</span>
+                                    </div>
+                                    <div class="item__comment">
+                                          <p class="comment__text">
+                                                Libero commodo sit dui ac proin. Penatibus ultricies at adipiscing
+                                                mauris nunc. Fames faucibus nisl duis id diam.
+                                          </p>
+                                          <div class="comment__reply">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17"
+                                                      viewBox="0 0 16 17" fill="none">
+                                                      <path d="M0.667318 7.82816L6.7625 1.16602V5.14077H8.05839C12.0766 5.14077 15.334 8.38764 15.334 12.393V14.4993L14.7584 13.8706C12.8014 11.7333 10.0324 10.5156 7.1293 10.5156H6.7625V14.4903L0.667318 7.82816Z"
+                                                            fill="#787A80" />
+                                                </svg>
+                                                <span>Reply</span>
+                                          </div>
+                                    </div>
+                              </li>
+                              <li class="comments__item">
+                                    <div class="item__user">
+                                          <span class="user__name">Marvin McKinney</span>
+                                          <span class="user__date">June 28, 2020</span>
+                                    </div>
+                                    <div class="item__comment">
+                                          <p class="comment__text">
+                                                Ullamcorper nibh sed ac ipsum nunc imperdiet rhoncus. Quam donec
+                                                habitant nibh sit consequat erat libero, tincidunt.
+                                                Eros ut aliquam proin et duis. Mauris, egestas congue nibh dui a nulla.
+                                          </p>
+                                          <div class="comment__reply">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17"
+                                                      viewBox="0 0 16 17" fill="none">
+                                                      <path d="M0.667318 7.82816L6.7625 1.16602V5.14077H8.05839C12.0766 5.14077 15.334 8.38764 15.334 12.393V14.4993L14.7584 13.8706C12.8014 11.7333 10.0324 10.5156 7.1293 10.5156H6.7625V14.4903L0.667318 7.82816Z"
+                                                            fill="#787A80" />
+                                                </svg>
+                                                <span>Reply</span>
+                                          </div>
+                                    </div>
+                              </li>
+                        </ul>
+                  </div>
             </section>
             <section class="application">
                   <div class="application-container container">
