add leave comment section

--- a/pages/post.html
+++ b/pages/post.html
@@ -308,6 +308,25 @@
                         </ul>
                   </div>
             </section>
+            <section class="leave-comment">
+                  <div class="leave-comment-container container">
+                        <h2 class="leave-comment__title title">Leave your comment</h2>
+                        <form action="" class="leave-comment__form">
+                              <div class="leave-comment__input-name input-block">
+                                    <label for="name">Name*</label>
+                                    <input type="text" name="name" id="name-input" placeholder="Your name">
+                              </div>
+                              <div class="leave-comment__input-email input-block">
+                                    <label for="email">Email*</label>
+                                    <input type="text" name="email" id="email-input" placeholder="Your working email">
+                              </div><div class="leave-comment__input-comment input-block">
+                                    <label for="comment">Your comment*</label>
+                                    <textarea type="text" name="comment" id="comment-input" placeholder="Type comment here"></textarea>
+                              </div>
+                              <button class="form__btn btn l-btn">Post comment</button>
+                        </form>
+                  </div>
+            </section>
             <section class="application">
                   <div class="application-container container">
                         <form action="" class="aplication__form">
