--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -49,6 +49,69 @@
                               class="page-title__background">
                   </div>
             </section>
+            <section class="contact-us">
+                  <div class="contact-us-conatiner conatiner">
+                        <h2 class="contact-us__title title">Contact us</h2>
+                        <p class="contact-us__subtitle subtitle"></p>
+                        <img src="../assets/contacts/contact-us.jpg" alt="contact-us" class="contact-us__img">
+                        <form action="" class="contact-us__form">
+                              <div class="form__input-name input-block">
+                                    <label for="form__input-name">Name*</label>
+                                    <input type="text" name="form__input-name" placeholder="Your name" />
+                              </div>
+                              <div class="form__input-category input-block">
+                                    <label for="form__input-category">I am interested in</label>
+                                    <select name="form__input-category">
+                                          <option value="none">Interior Design</option>
+                                          <option value="Russia">Construction</option>
+                                          <option value="France">Project Development</option>
+                                          <option value="Germany">Repairs</option>
+                                    </select>
+                              </div>
+                              <div class="form__input-phone input-block">
+                                    <label for="form__input-phone">Location*</label>
+                                    <input type="number" name="form__input-phone" placeholder="Your phone number" />
+                              </div>
+                              <div class="form__input-location input-block">
+                                    <label for="form__input-location">Location*</label>
+                                    <select name="form__input-location">
+                                          <option value="none">Choose your location</option>
+                                          <option value="Russia">Russia</option>
+                                          <option value="France">France</option>
+                                          <option value="Germany">Germany</option>
+                                    </select>
+                              </div>
+                              <div class="form__input-contact-method">
+                                    <p class="input-contact-method__title">Preferred contact method</p>
+                                    <input type="radio" name="contact-method" id="contact-method-phone" checked>
+                                    <label for="contact-method-phone">Phone</label>
+                                    <input type="radio" name="contact-method" id="contact-method-email">
+                                    <label for="contact-method-email">Email</label>
+                                    <input type="radio" name="contact-method" id="contact-method-viber">
+                                    <label for="contact-method-viber">Viber</label>
+                              </div>
+                              <div class="form__input-email input-block">
+                                    <label for="form__input-email">Email*</label>
+                                    <input type="text" name="form__input-email" placeholder="Your working email" />
+                              </div>
+                              <div class="form__input-message input-block">
+                                    <label for="form__input-message">Message*</label>
+                                    <textarea type="text" name="form__input-message"
+                                          placeholder="Your message"></textarea>
+                              </div>
+                              <div class="form__checkbox">
+                                    <input type="checkbox" name="form-checkbox" id="form-checkbox-contacts"
+                                          class="custom-checkbox">
+                                    <label for="form-checkbox-contacts">
+                                          I agree to receive communications from Createx
+                                          Construction
+                                          Bureau.
+                                    </label>
+                              </div>
+                              <button class="btn l-btn form__btn">send request</button>
+                        </form>
+                  </div>
+            </section>
             <section class="application">
                   <div class="application-container container">
                         <form action="" class="aplication__form">
