--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -50,9 +50,10 @@
                   </div>
             </section>
             <section class="contact-us">
-                  <div class="contact-us-conatiner conatiner">
+                  <div class="contact-us-container container">
                         <h2 class="contact-us__title title">Contact us</h2>
-                        <p class="contact-us__subtitle subtitle"></p>
+                        <p class="contact-us__subtitle subtitle">Please complete the form. Detailed information will
+                              help us to make a tuned offer.</p>
                         <img src="../assets/contacts/contact-us.jpg" alt="contact-us" class="contact-us__img">
                         <form action="" class="contact-us__form">
                               <div class="form__input-name input-block">
@@ -69,7 +70,7 @@
                                     </select>
                               </div>
                               <div class="form__input-phone input-block">
-                                    <label for="form__input-phone">Location*</label>
+                                    <label for="form__input-phone">Phone*</label>
                                     <input type="number" name="form__input-phone" placeholder="Your phone number" />
                               </div>
                               <div class="form__input-location input-block">
@@ -81,18 +82,25 @@
                                           <option value="Germany">Germany</option>
                                     </select>
                               </div>
-                              <div class="form__input-contact-method">
-                                    <p class="input-contact-method__title">Preferred contact method</p>
-                                    <input type="radio" name="contact-method" id="contact-method-phone" checked>
-                                    <label for="contact-method-phone">Phone</label>
-                                    <input type="radio" name="contact-method" id="contact-method-email">
-                                    <label for="contact-method-email">Email</label>
-                                    <input type="radio" name="contact-method" id="contact-method-viber">
-                                    <label for="contact-method-viber">Viber</label>
-                              </div>
                               <div class="form__input-email input-block">
                                     <label for="form__input-email">Email*</label>
                                     <input type="text" name="form__input-email" placeholder="Your working email" />
+                              </div>
+                              <div class="form__input-contact-method">
+                                    <p class="input-contact-method__title">Preferred contact method</p>
+                                    <label for="contact-method-phone" class="custom-radio">
+                                          <input type="radio" name="contact-method" id="contact-method-phone" checked>
+                                          <span>Phone</span>
+                                    </label>
+                                    <label for="contact-method-email" class="custom-radio">
+
+                                          <input type="radio" name="contact-method" id="contact-method-email">
+                                          <span>Email</span>
+                                    </label>
+                                    <label for="contact-method-viber" class="custom-radio">
+                                          <input type="radio" name="contact-method" id="contact-method-viber">
+                                          <span>Viber</span>
+                                    </label>
                               </div>
                               <div class="form__input-message input-block">
                                     <label for="form__input-message">Message*</label>
